little background color change

--- a/www/style.css
+++ b/www/style.css
@@ -10,7 +10,7 @@
 body {
   height: 100vh;
   width: 100%;
-  background-color: #0d1117;
+  background-color: #000;
   color: #ecf2f8;
   font-family: "Poppins", sans-serif;
   display: flex;
@@ -71,7 +71,7 @@ body {
   border: 2px solid #3d444d;
   border-radius: 15px;
   height: 100%;
-  background-color: #161b22;
+  background-color: #0d1117;
   display: flex;
   align-items: center;
 }
